feat：新增文件相关功能校验、新增文件删除功能