@@ -1,7 +1,9 @@
 package com.quick.utils;
 
-import io.minio.*;
-import io.minio.messages.Item;
+import io.minio.GetObjectArgs;
+import io.minio.MinioClient;
+import io.minio.PutObjectArgs;
+import io.minio.RemoveObjectArgs;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -12,8 +14,7 @@ import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletResponse;
 import java.io.InputStream;
 import java.net.URLEncoder;
-import java.util.ArrayList;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
 
 /**
  * @Author 徐志斌
@@ -31,6 +32,10 @@ public class MinioUtil {
 
     /**
      * 上传文件
+     *
+     * @param file       文件对象
+     * @param bucketName Bucket桶名
+     * @return 文件url
      */
     public String upload(MultipartFile file, String bucketName) throws Exception {
         String fileName = file.getOriginalFilename();
@@ -66,6 +71,9 @@ public class MinioUtil {
 
     /**
      * 下载文件
+     *
+     * @param bucketName Bucket桶名
+     * @param url        文件url
      */
     public void download(String bucketName, String url) {
         String filename = this.getFileNameFromURL(url);
@@ -77,7 +85,8 @@ public class MinioUtil {
             ServletOutputStream outputStream = response.getOutputStream();
             response.setContentType("application/octet-stream");
             response.setCharacterEncoding("utf-8");
-            response.addHeader("Content-Disposition", "attachment; filename=" + URLEncoder.encode(filename, "UTF-8"));
+            response.addHeader("Content-Disposition",
+                    "attachment; filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
             byte[] bytes = new byte[1024];
             int len;
             while ((len = inputStream.read(bytes)) > 0) {
@@ -85,59 +94,30 @@ public class MinioUtil {
             }
             outputStream.close();
         } catch (Exception e) {
-//            log.error("file download from minio exception, file name: {}", filename, e);
+            log.error("file download from minio exception, file name: {}", filename, e);
         }
-    }
-
-    /**
-     * 查看文件对象
-     */
-    public List<Item> getFileList(String bucketName) throws Exception {
-        Iterable<Result<Item>> results =
-                minioClient.listObjects(ListObjectsArgs.builder().bucket(bucketName).build());
-        List<Item> objectItems = new ArrayList<>();
-        for (Result<Item> result : results) {
-            Item item = result.get();
-            objectItems.add(item);
-        }
-        return objectItems;
     }
 
     /**
      * 删除文件对象
+     *
+     * @param bucketName Bucket桶名
+     * @param fileName   文件名
      */
-    public void removeObject(String bucketName, String objName) throws Exception {
-        minioClient.removeObject(RemoveObjectArgs.builder().bucket(bucketName).object(objName).build());
-    }
-
-    /**
-     * 创建 bucket
-     */
-    public void createBucket(String bucketName) throws Exception {
-        minioClient.makeBucket(MakeBucketArgs.builder()
+    public void delete(String bucketName, String fileName) throws Exception {
+        RemoveObjectArgs removeArgs = RemoveObjectArgs.builder()
                 .bucket(bucketName)
-                .build());
+                .object(fileName)
+                .build();
+        minioClient.removeObject(removeArgs);
     }
 
     /**
-     * 删除 bucket
+     * 根据 url 获取文件名称
+     *
+     * @param url 文件url
+     * @return 文件名
      */
-    public void deleteBucket(String bucketName) throws Exception {
-        minioClient.removeBucket(RemoveBucketArgs.builder()
-                .bucket(bucketName)
-                .build());
-    }
-
-    /**
-     * 判断bucket是否存在（不存在则创建）
-     */
-    public void existBucket(String name) throws Exception {
-        boolean exists = minioClient.bucketExists(BucketExistsArgs.builder().bucket(name).build());
-        if (!exists) {
-            minioClient.makeBucket(MakeBucketArgs.builder().bucket(name).build());
-        }
-    }
-
     private String getFileNameFromURL(String url) {
         int lastSlashIndex = url.lastIndexOf('/');
         if (lastSlashIndex == -1) {
@@ -145,4 +125,46 @@ public class MinioUtil {
         }
         return url.substring(lastSlashIndex + 1);
     }
+
+//    /**
+//     * 查看文件对象
+//     */
+//    public List<Item> getFileList(String bucketName) throws Exception {
+//        Iterable<Result<Item>> results =
+//                minioClient.listObjects(ListObjectsArgs.builder().bucket(bucketName).build());
+//        List<Item> objectItems = new ArrayList<>();
+//        for (Result<Item> result : results) {
+//            Item item = result.get();
+//            objectItems.add(item);
+//        }
+//        return objectItems;
+//    }
+//
+//    /**
+//     * 创建 bucket
+//     */
+//    public void createBucket(String bucketName) throws Exception {
+//        minioClient.makeBucket(MakeBucketArgs.builder()
+//                .bucket(bucketName)
+//                .build());
+//    }
+//
+//    /**
+//     * 删除 bucket
+//     */
+//    public void deleteBucket(String bucketName) throws Exception {
+//        minioClient.removeBucket(RemoveBucketArgs.builder()
+//                .bucket(bucketName)
+//                .build());
+//    }
+//
+//    /**
+//     * 判断bucket是否存在（不存在则创建）
+//     */
+//    public void existBucket(String name) throws Exception {
+//        boolean exists = minioClient.bucketExists(BucketExistsArgs.builder().bucket(name).build());
+//        if (!exists) {
+//            minioClient.makeBucket(MakeBucketArgs.builder().bucket(name).build());
+//        }
+//    }
 }
